--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
+<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <title>Simple</title>
-    <script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src = "https://cdnjs.cloudflare.com/ajax/libs/rivets/0.8.1/rivets.bundled.min.js"></script>
-    <script src = "./scripts/simply.js"></script>
-    <script src = "./scripts/navigo.js"></script>
-</head>
-<body onload = "init()">
-    <div id="view"></div>
-</body>
+    <head>
+        <script data-main="app" src = "https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.js"></script>
+    </head>
+    <body>
+        <h1>Hello World</h1>
+        <a href="/todo" data-navigo>Todos</a>
+        <br>
+        <a href="/user/th" data-navigo>User</a>
+        <br>
+        <a href="/">Home</a>
+        <div id="view"></div>
+    </body>
 </html>
