--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <script data-main="app" src = "https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.js"></script>
+        <link rel="stylesheet" href="https://unpkg.com/ag-grid-community/dist/styles/ag-grid.css">
+        <link rel="stylesheet" href="https://unpkg.com/ag-grid-community/dist/styles/ag-theme-balham.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     </head>
     <body>
         <h1>Hello World</h1>
@@ -9,7 +12,8 @@
         <br>
         <a href="/user/th" data-navigo>User</a>
         <br>
-        <a href="/">Home</a>
+        <a href="/griddemo" data-navigo>Grid Demo</a>
+        <br>
         <div id="view"></div>
     </body>
 </html>
